--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -55,7 +55,7 @@ jobs:
         runs-on: ubuntu-latest
         needs: test-and-build-api
         permissions:
-          id-token: write    # Permiso para generar el OIDC token
+          id-token: write
           contents: read
         steps:
           - name: Checkout code
