--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -73,6 +73,12 @@ jobs:
               role-to-assume: arn:aws:iam::992382698192:role/RagDiaryTerraform
               aws-region: sa-east-1
               audience: sts.amazonaws.com
+          
+          - name: Set up Terraform variables
+            run: |
+              echo "TF_VAR_supabase_url=${{ secrets.SUPABASE_URL }}" >> $GITHUB_ENV
+              echo "TF_VAR_supabase_key=${{ secrets.SUPABASE_KEY }}" >> $GITHUB_ENV
+              echo "TF_VAR_openai_api_key=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
 
           - name: Set up Terraform
             uses: hashicorp/setup-terraform@v1
