add save user messages feature

--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -79,6 +79,7 @@ jobs:
               echo "TF_VAR_supabase_url=${{ secrets.SUPABASE_URL }}" >> $GITHUB_ENV
               echo "TF_VAR_supabase_key=${{ secrets.SUPABASE_KEY }}" >> $GITHUB_ENV
               echo "TF_VAR_openai_api_key=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
+              echo "TF_VAR_ip_info_api_key=${{ secrets.IP_INFO_API_KEY }}" >> $GITHUB_ENV
 
           - name: Set up Terraform
             uses: hashicorp/setup-terraform@v1
